Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <h2>
 <a name="who-can-use-this-plugin" class="anchor" href="#who-can-use-this-plugin"><span class="octicon octicon-link"></span></a>Who can use this plugin?</h2>
 
-<p>Offerchat Registered users who have joomla websites.</p>
+<p>Offerchat Registered users who have OpenCart websites.</p>
 
 <h2>
 <a name="what-do-i-need-to-be-able-to-use-this-plugin" class="anchor" href="#what-do-i-need-to-be-able-to-use-this-plugin"><span class="octicon octicon-link"></span></a>What do I need to be able to use this plugin?</h2>
